fiberplane-pdk-macros/tests/schema/fail/array_field.stderr
error[E0599]: no function or associated item named `schema` found for struct `RowItem` in the current scope
  --> tests/schema/fail/array_field.rs:14:23
   |
9  | pub struct RowItem {
   | ------------------ function or associated item `schema` not found for this struct
...
14 | #[derive(Deserialize, QuerySchema)]
   |                       ^^^^^^^^^^^ function or associated item not found in `RowItem`
   |
   = note: this error originates in the derive macro `QuerySchema` (in Nightly builds, run with -Z macro-backtrace for more info)
